vsync 3 (#194)
* v sync 3

* Properly handle committee members who did not supply their view signing key in the CHOAM view reconfiguration.

Some clean up on builders, adding missing clone()

* try 2 forks again

* 4 forks

* interim.

Save progress before refactoring Join protocol.

* interim.

Invert join protocol. Future contacts past. Revive ASSEMBLE block.

Dear lord.

* interim.

moar

* interim.

moar

* hallelujah! build runs green

View change protocol now stable.

* 2 forks

* 4

* info logging for CHOAM

* no forks

* fix test params

* trace instead of info

* prioritize joins

* more efficient joins.